# battleship

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: battleship.py  battleship_events.py
src/common/: grid.py  pos.py  ship.py
src/sea_battle/: board.py  enums.py  player.py
src/sea_battle_event/: board.py  config.py  enums.py  event_manager.py  game_manager.py  player.py  protocols.py
tests/test_common/: test_grid.py  test_pos.py  test_ship.py
tests/test_sea_battle/: test_board.py  test_player.py
tests/test_sea_battle_events/: test_board.py  test_event_manager.py  test_game_manager.py  test_player.py
